--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html{
 
 body{
     background-color:#2f3035;
-    background-image: url(image/background-adare-restaurant.jpg);
+    background-image: url(https://github.com/freezgames/leer-proces/blob/main/image/background-adare-restaurant.jpg?raw=true);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
